--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -50,6 +50,7 @@
                     <p>Your cart is empty.</p>
                 {% endfor %}
             </div>
+            <h3>Total Price: ${{ total_price }}</h3>
         </div>
     </div>
 </body>
