--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -23,15 +23,17 @@
     <h1>Store</h1>
     <div class="store-container">
         <div class="product-list">
+            {% load custom_filters %}  <!-- Load your custom filter here -->
             {% for product in products %}
                 <div>
                     <h2>{{ product.name }}</h2>
                     <img src="{{ product.image.url }}" alt="{{ product.name }}" style="max-width: 200px;">
                     <p>Price: ${{ product.price }}</p>
-                    <p>Stock: {{ product.stock }}</p>
                     {% if product.discount %}
                         <p>Discount: {{ product.discount }}%</p>
+                        <p>Price after discount: ${{ product.price|discount_price:product.discount }}</p>
                     {% endif %}
+                    <p>Stock: {{ product.stock }}</p>
                     <form action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <button type="submit">Add to Cart</button>
